--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     </div>  -->
             </div>
 
-            <main class="mini-scroll">
+            <main class="list-scroll">
                 <section class="play-section">
                     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                         <div class="carousel-indicators">
@@ -292,10 +292,10 @@
                 <div class="footer-nav">
                     <a href="./index.html" class="active">
                         <i class="fa-solid fa-house"></i> Home</a>
-                    <a href="./offer.html" class="">
-                        <i class="fa-solid fa-tag"></i> Offers</a>
-                    <a href="./passbook.html" class="">
-                        <i class="fa-solid fa-book"></i> Passbook</a>
+                    <a href="./passbook.html"  class="">
+                        <i class="fa-solid fa-tag"></i>Passbook </a>
+                    <a  href="./offer.html" class="">
+                        <i class="fa-solid fa-book"></i> Offers</a>
                     <a href="./ids.html" class=""><i class="fa-solid fa-user"></i>IDs
                     </a>
                 </div>
