--- a/offer.html
+++ b/offer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Offer</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> -->
     <!-- font-icon -->
@@ -27,7 +27,7 @@
                             data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
                             <i class="fa-solid fa-bars"></i>
                         </button>
-                        <span class="header-text"> Offers</span>
+                        <span class="header-text"> Passbook</span>
                         <div class="right-menu">
                             <button class="header-btn" type="button" data-bs-toggle="offcanvas"
                                 data-bs-target="#offcanvas" aria-controls="offcanvasTop"><i
@@ -73,11 +73,11 @@
 
             <main class="mini-scroll offer-scroll">
                 <section class="out-banner">
-                    <div class="out-banner-headeing">
+                    <!-- <div class="out-banner-headeing">
                         <h2>Top Offers</h2>
-                    </div>
+                    </div> -->
                     <div class="offer-data">
-                        <button class=""> <i class="fa-solid fa-tag"></i> </button>
+                        <button> <i class="fa-solid fa-book"></i> </button>
                         You don't have any offers yet.
                     </div>
                 </section>
@@ -86,8 +86,8 @@
             <footer class="offer-footer">
                 <div class="mobail-menu">
                     <a href="./index.html" class=""> <i class="fa-solid fa-house"></i> Home</a>
-                    <a href="./offer.html" class="active"> <i class="fa-solid fa-tag"></i> Offers</a>
-                    <a href="./passbook.html" class=""> <i class="fa-solid fa-book"></i> Passbook</a>
+                    <a href="./offer.html" class=""> <i class="fa-solid fa-tag"></i>Passbook </a>
+                    <a href="./passbook.html" class="active"> <i class="fa-solid fa-book"></i> Offers</a>
                     <a href="./ids.html" class=""><i class="fa-solid fa-user"></i>IDs </a>
                 </div>
             </footer>
