--- a/passbook.html
+++ b/passbook.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>offer</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> -->
     <!-- font-icon -->
@@ -18,11 +18,11 @@
 </head>
 
 <body>
-    <div class="wapper">
-        <div class="iner-wapper">
+    <div class="wrapper">
+        <div class="section">
             <header>
                 <div class="container">
-                    <div class="header">
+                    <div class="wrapper d-flex justify-content-between align-items-center">
                         <button class="header-btn" type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
                             <i class="fa-solid fa-bars"></i>
@@ -64,33 +64,136 @@
                         </div>
                     </div>
                 </div>
-            </header>
-
-
-            <div class="banner offer-banner">
-
-            </div>
-
-            <main class="mini-scroll offer-scroll">
-                <section class="out-banner">
-                    <!-- <div class="out-banner-headeing">
-                        <h2>Top Offers</h2>
-                    </div> -->
-                    <div class="offer-data">
-                        <button> <i class="fa-solid fa-book"></i> </button>
-                        You don't have any offers yet.
-                    </div>
                 </section>
 
-            </main>
-            <footer class="offer-footer">
-                <div class="mobail-menu">
-                    <a href="./index.html" class=""> <i class="fa-solid fa-house"></i> Home</a>
-                    <a href="./offer.html" class=""> <i class="fa-solid fa-tag"></i> Offers</a>
-                    <a href="./passbook.html" class="active"> <i class="fa-solid fa-book"></i> Passbook</a>
-                    <a href="./ids.html" class=""><i class="fa-solid fa-user"></i>IDs </a>
+                <div class="">
+                    <section class="wrapper">
+                        <div class="out-banner-headeing">
+                            <h2>Passbook</h2>
+                        </div>
+                        <div class="">
+                            <div class="main-list offer">
+                                <!-- <div class="list-title d-flex align-items-center">
+                                <div class="">
+                                    <img src="./asetes/image/logo_1.svg" alt="">
+                                </div>
+                                <div class="ps-4">
+                                    <h6 class="text-start">Test1</h6>
+                                    <p class="">http://localhost/word777/</p>
+                                </div>
+                            </div>
+                            <div class="list-menu">
+                                <div >
+                                    <p>Withdraw</p>
+                                </div>
+                                
+                            </div> -->
+                                <div class="list-wrapper">
+                                    <div class="p-list">
+                                        <div class="list-title d-flex align-items-center ">
+                                            <div class="">
+                                                <img src="./asetes/image/logo_1.svg" class="ms-0" alt="">
+                                            </div>
+                                            <div class="ps-4">
+                                                <h6 class="text-start">Deposit - $100</h6>
+                                                <p class="">22-10-16</p>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <div>
+                                                <p class="mb-0"><small>payment mode</small></p>
+                                                <p>Wallet</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p>
+                                            <small>Requested</small>
+                                        </p>
+                                        <p>
+                                            <small>Remark-</small>
+                                        </p>
+                                    </div>
+
+
+                                </div>
+                                <div class="list-wrapper">
+                                    <div class="p-list">
+                                        <div class="list-title d-flex align-items-center ">
+                                            <div class="">
+                                                <img src="./asetes/image/logo_1.svg" class="ms-0" alt="">
+                                            </div>
+                                            <div class="ps-4">
+                                                <h6 class="text-start">Deposit - $100</h6>
+                                                <p class="">22-10-16</p>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <div>
+                                                <p class="mb-0"><small>payment mode</small></p>
+                                                <p>Wallet</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p>
+                                            <small>Requested</small>
+                                        </p>
+                                        <p>
+                                            <small>Remark-</small>
+                                        </p>
+                                    </div>
+
+
+                                </div>
+                                <div class="list-wrapper">
+                                    <div class="p-list">
+                                        <div class="list-title d-flex align-items-center ">
+                                            <div class="">
+                                                <img src="./asetes/image/logo_1.svg" class="ms-0" alt="">
+                                            </div>
+                                            <div class="ps-4">
+                                                <h6 class="text-start">Deposit - $100</h6>
+                                                <p class="">22-10-16</p>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <div>
+                                                <p class="mb-0"><small>payment mode</small></p>
+                                                <p>Wallet</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p>
+                                            <small>Requested</small>
+                                        </p>
+                                        <p>
+                                            <small>Remark-</small>
+                                        </p>
+                                    </div>
+
+
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </div>
-            </footer>
+                <footer>
+                    <div class="footer-nav">
+                        <a href="./index.html" class="active">
+                            <i class="fa-solid fa-house"></i> Home</a>
+                            <a href="./passbook.html" class="">
+                                <i class="fa-solid fa-book"></i> Passbook</a>
+                        <a href="./offer.html" class="">
+                            <i class="fa-solid fa-tag"></i> Offers</a>
+                        
+                        <a href="./ids.html" class=""><i class="fa-solid fa-user"></i>IDs
+                        </a>
+                    </div>
+                </footer>
+
+
         </div>
     </div>
 
@@ -103,9 +206,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
 
-        <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-        <script src="./asetes/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="./asetes/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
